fixed overflow, needs to fix positioning

--- a/src/shared/components/slider/slider.component.css
+++ b/src/shared/components/slider/slider.component.css
@@ -33,6 +33,9 @@
   box-sizing: border-box;
   width: 100%;
   user-select: none;
+  vertical-align: middle;
+  align-items: center;
+  overflow: hidden;
 }
 
 .slider {
@@ -47,7 +50,7 @@
   height: 100%;
   background-color: rgb(233, 233, 233);
   cursor: pointer;
-  overflow: hidden; 
+  clip-path: inset( -100vw -100vw -100vw 0 );
 }
 
 .slider .slider-background .slider-progress {
@@ -55,23 +58,30 @@
   height: 100%;
   background-color: var(--primary);
   border-radius: .5px;
-  /* transition: .2s ease-in-out; */
+  transition: .02s ease-in-out;
 }
 
 .slider .slider-thumb {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  display: inline-flex;
   width: 20px;
   height: 20px;
   background-color: var(--primary);
   border-radius: 50%;
   top: 50%;
   transform: translateY(-50%);
-  /* left: 0px; */
+  right: -5px;
   user-select: none;
   cursor:grab;
+  align-items: flex-end;
 }
 
 .slider .slider-thumb:active {
   cursor: grabbing;
+}
+
+.slider .thumb-container {
+  position: relative;
+  top: -50%;
+  transition: .02s ease-in-out;
 }
